--- a/moveit-next/src/styles/components/Countdown.module.css
+++ b/moveit-next/src/styles/components/Countdown.module.css
@@ -59,7 +59,7 @@
     transition: background-color 0.2s;
 }
 
-.countdownButton:hover {
+.countdownButton:not(:disabled):hover {
     background: var(--blue-dark);
 }
 
@@ -68,7 +68,13 @@
     color: var(--title);
 }
 
-.countdownButtonIsActive:hover {
+.countdownButtonIsActive:not(:disabled):hover {
     background-color: var(--red);
     color: var(--white);
+}
+
+.countdownButton:disabled {
+    background: var(--white);
+    color: var(--text);
+    cursor: not-allowed;
 }
